Bugfix modal on Terms & Conditions and CSS button alignment.

--- a/cleangap.web/content/css/main.css
+++ b/cleangap.web/content/css/main.css
@@ -107,6 +107,9 @@ label {
 	margin-right: 10px;
 	font-size: 16px;
 }
+.btn-finish-summary {
+    margin-right: 21px;
+}
 .header {
 	width: 100%;
 	height: 15px;
